--- a/templates/employerfooter.html.twig
+++ b/templates/employerfooter.html.twig
@@ -38,13 +38,13 @@
             </div>
             <div class="col-sm-3">
                 <div class="widget">
-                    <h5 class="widget-title font-alt">Job Catogories</h5>
+                    <h5 class="widget-title font-alt">Service</h5>
                     <ul class="icon-list">
-                        <li><a href="#">Soft Skills</a></li>
-                        <li><a href="#">Career Counselling</a></li>
-                        <li><a href="#">Communication Skills</a></li>
-                        <li><a href="#">Faculty Training</a></li>
-                        <li><a href="#">Placement services</a></li>
+                        <li><a href="{{ path('custom_softskills') }}">Soft Skills</a></li>
+                        <li><a href="{{ path('custom_careercounselling') }}">Career Counselling</a></li>
+                        <li><a href="{{ path('custom_communicationskills') }}">Communication Skills</a></li>
+                        <li><a href="{{ path('custom_facultytraining') }}">Faculty Training</a></li>
+                        <li><a href="{{ path('custom_placementservices') }}">Placement services</a></li>
                     </ul>
                 </div>
             </div>
