--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -56,13 +56,13 @@
                 </div>
                 <div class="col-lg-3 d-md-none d-lg-block">
                     <div class="single-footer-widget">
-                        <h3 class="text-white mb-21">Job Catogories</h3>
+                        <h3 class="text-white mb-21">Services</h3>
                         <ul class="footer-list">
-                            <li><a href="#">Soft Skills</a></li>
-                            <li><a href="#">Career Counselling</a></li>
-                            <li><a href="#">Communication Skills</a></li>
-                            <li><a href="#">Faculty Training</a></li>
-                            <li><a href="#">Placement services</a></li>
+                            <li><a href="{{ path('custom_softskills') }}">Soft Skills</a></li>
+                            <li><a href="{{ path('custom_careercounselling') }}">Career Counselling</a></li>
+                            <li><a href="{{ path('custom_communicationskills') }}">Communication Skills</a></li>
+                            <li><a href="{{ path('custom_facultytraining') }}">Faculty Training</a></li>
+                            <li><a href="{{ path('custom_placementservices') }}">Placement services</a></li>
                         </ul>
                     </div>
                 </div>
