--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -124,42 +124,42 @@
                     </div>
                     <h5>Teaching Jobs</h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('2')">
+                <div class="category-item" onclick="javascript:searchforJobstype('5')">
                     <div class="img-icon">
                         <img src="images/icons/cat2.png" alt="">
                     </div>
                     <h5>Information Technology</h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('3')">
+                <div class="category-item" onclick="javascript:searchforJobstype('7')">
                     <div class="img-icon">
                         <img src="images/icons/cat1.png" alt="">
                     </div>
                     <h5>Hospitality
                     </h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('4')">
+                <div class="category-item" onclick="javascript:searchforJobstype('2')">
                     <div class="img-icon">
                         <img src="images/icons/cat4.png" alt="">
                     </div>
                     <h5>Counselling</h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('5')">
+                <div class="category-item" onclick="javascript:searchforJobstype('8')">
                     <div class="img-icon">
                         <img src="images/icons/cat1.png" alt="">
                     </div>
                     <h5>Banking</h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('6')">
+                <div class="category-item" onclick="javascript:searchforJobstype('11')">
                     <div class="img-icon">
                         <img src="images/icons/cat2.png" alt="">
                     </div>
                     <h5>Real Estate</h5>
                 </div>
-                <div class="category-item" onclick="javascript:searchforJobstype('7')">
+                <div class="category-item" onclick="javascript:searchforJobstype('14')">
                     <div class="img-icon">
                         <img src="images/icons/cat3.png" alt="">
                     </div>
-                    <h5>Abroad Jobs</h5>
+                    <h5>Automobile</h5>
                 </div>
             </div>
         </div>
