--- a/templates/employerheader.html.twig
+++ b/templates/employerheader.html.twig
@@ -19,6 +19,10 @@
                 </li>
                 <li class="dropdown"><a href="{{ path('_employer_home') }}">Contact us</a>
                 </li>
+                <li class="dropdown"><a href="{{ path('_employer_pricing') }}">Pricing</a>
+                </li>
+                <li class="dropdown"><a href="{{ path('_home') }}">Jobseekers</a>
+                </li>
                 <li class="dropdown"><a href="/blogs">Blogs</a>
                 </li>
                 {% if app.user is defined and app.user is not null %}
