--- a/templates/employerheader.html.twig
+++ b/templates/employerheader.html.twig
@@ -17,7 +17,7 @@
                         <li><a href="{{ path('_employer_index') }}">Application History</a></li>
                     </ul>
                 </li>
-                <li class="dropdown"><a href="{{ path('_employer_home') }}">Contact us</a>
+                <li class="dropdown"><a href="{{ path('_contactus') }}">Contact us</a>
                 </li>
                 <li class="dropdown"><a href="{{ path('_employer_pricing') }}">Pricing</a>
                 </li>
