changes in homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -343,7 +343,7 @@
                 <div class="col-md-12">
                     <div class="section-title text-center ">
                         <h2>How It Works</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -355,8 +355,7 @@
                             <img src="images/icons/wrk1.png" alt="">
                         </div>
                         <h5>Create An Account</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab
-                            et dolore magna aliqua.</p>
+                        <p>You may create an account by using a user name, password, and email id</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -365,8 +364,7 @@
                             <img src="images/icons/wrk2.png" alt="">
                         </div>
                         <h5>Search Desired Job</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab
-                            et dolore magna aliqua.</p>
+                        <p>Search based on requirement</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -375,8 +373,7 @@
                             <img src="images/icons/wrk3.png" alt="">
                         </div>
                         <h5>Send Your Resume</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab
-                            et dolore magna aliqua.</p>
+                        <p>Once you have registered your account with skillsfarm,you may upload your recent updated resume with all relevant facts,contact details.You may  always verify your contact details and let recruiters reach you with your desired jobs</p>
                     </div>
                 </div>
             </div>
