emplloyer home changes

--- a/templates/employer/index.html.twig
+++ b/templates/employer/index.html.twig
@@ -7,7 +7,7 @@
                 <li class="bg-dark-30 bg-dark" style="background-image:url(/img/conference.jpg);">
                     <div class="titan-caption">
                         <div class="caption-content">
-                            <div class="font-alt mb-30 titan-title-size-1">Hello & welcome to</div>
+                            <div class="font-alt mb-30 titan-title-size-1">welcome to</div>
                             <div class="font-alt mb-40 titan-title-size-4">Skillsfarm recruiters</div>
                             <a class="section-scroll btn btn-border-w btn-round" href="#about">Learn More</a>
                         </div>
@@ -16,8 +16,9 @@
                 <li class="bg-dark-30 bg-dark" style="background-image:url(/img/book_1.jpg);">
                     <div class="titan-caption">
                         <div class="caption-content">
-                            <div class="font-alt mb-30 titan-title-size-2">You can add jobs easily<br/>where millions of
-                                jobseeker visit our site
+                            <div class="font-alt mb-30 titan-title-size-2">You can add jobs easily<br/>where in millions
+                                of
+                                <b>jobseekers</b> visit our site
                             </div>
                             <a class="btn btn-border-w btn-round" href="about">Learn More</a>
                         </div>
@@ -40,10 +41,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
-                        <h2 class="module-title font-alt">Welcome to Titan</h2>
-                        <div class="module-subtitle font-serif large-text">We’re an award winning London based digital
-                            agency, lovingly curating pixels for maximum impact. We don’t have a style — we have
-                            standards.
+                        <h2 class="module-title font-alt">Welcome to Skillsfarm - Recruiter</h2>
+                        <div class="module-subtitle font-serif large-text">Engage and attract the best jobseekers talent
+                            in INDIA & ABROAD.
                         </div>
                     </div>
                 </div>
@@ -60,75 +60,67 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
-                        <h2 class="module-title font-alt">Our Services</h2>
-                        <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire
-                            soul, like these sweet mornings of spring which I enjoy with my whole heart.
+                        <h2 class="module-title font-alt">Our Job Categories</h2>
+                        <div class="module-subtitle font-serif">we’ll help you fill all of your positions in the most
+                            cost-effective manner.
                         </div>
                     </div>
                 </div>
                 <div class="row multi-columns-row">
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
-                            <div class="features-icon"><span class="icon-lightbulb"></span></div>
-                            <h3 class="features-title font-alt">Ideas and concepts</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="features-item">
                             <div class="features-icon"><span class="icon-bike"></span></div>
-                            <h3 class="features-title font-alt">Optimised for speed</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <h3 class="features-title font-alt">Part-Time/Full Time</h3>
+                            <p</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
-                            <div class="features-icon"><span class="icon-tools"></span></div>
-                            <h3 class="features-title font-alt">Designs &amp; interfaces</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <div class="features-icon"><span class="icon-search"></span></div>
+                            <h3 class="features-title font-alt">Temporary</h3>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
-                            <div class="features-icon"><span class="icon-gears"></span></div>
-                            <h3 class="features-title font-alt">Highly customizable</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <div class="features-icon"><span class="icon-caution"></span></div>
+                            <h3 class="features-title font-alt">Freshers</h3>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
-                            <div class="features-icon"><span class="icon-tools-2"></span></div>
-                            <h3 class="features-title font-alt">Coding &amp; development</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <div class="features-icon"><span class="icon-cloud"></span></div>
+                            <h3 class="features-title font-alt">Internship</h3>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
                             <div class="features-icon"><span class="icon-genius"></span></div>
-                            <h3 class="features-title font-alt">Features &amp; plugins</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <h3 class="features-title font-alt">Graduates</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="features-item">
+                            <div class="features-icon"><span class="icon-book-open"></span></div>
+                            <h3 class="features-title font-alt">Teaching</h3>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
                             <div class="features-icon"><span class="icon-mobile"></span></div>
-                            <h3 class="features-title font-alt">Responsive design</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <h3 class="features-title font-alt">Information Technology</h3>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="features-item">
                             <div class="features-icon"><span class="icon-lifesaver"></span></div>
-                            <h3 class="features-title font-alt">Dedicated support</h3>
-                            <p>Careful attention to detail and clean, well structured code ensures a smooth user
-                                experience for all your visitors.</p>
+                            <h3 class="features-title font-alt">Counselling</h3>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -139,13 +131,13 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-8 col-lg-6 col-lg-offset-2">
                         <div class="callout-text font-alt">
-                            <h3 class="callout-title">Want to see more works?</h3>
-                            <p>We are always open to interesting projects.</p>
+                            <h3 class="callout-title">Want to post a Job?</h3>
+                            <p>Welcome Offer already in the top.....</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-2">
                         <div class="callout-btn-box"><a class="btn btn-w btn-round"
-                                                        href="portfolio_boxed_gutter_col_3.html">Lets view portfolio</a>
+                                                        href="{{ path('_employer_pricing') }}">Lets view pricing</a>
                         </div>
                     </div>
                 </div>
@@ -156,58 +148,69 @@
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
                         <h2 class="module-title font-alt">Our features</h2>
-                        <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire
-                            soul, like these sweet mornings of spring which I enjoy with my whole heart.
+                        <div class="module-subtitle font-serif">Advertising options with us to help you
+                            recruit the best talent, fast!
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-md-3 col-lg-3">
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-strategy"></span></div>
-                            <h3 class="alt-features-title font-alt">Branding</h3>A wonderful serenity has taken
-                            possession of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-basket"></span></div>
+                            <h3 class="alt-features-title font-alt">Standard Listing</h3>Showcase details of your
+                            vacancy
+                            to allow jobseekers to search a range of criteria, including screening questions and your
+                            own formatting.
                         </div>
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-tools-2"></span></div>
-                            <h3 class="alt-features-title font-alt">Development</h3>A wonderful serenity has taken
-                            possession of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-basket"></span></div>
+                            <h3 class="alt-features-title font-alt">Featured Listings</h3>Stand out from the crowd
+                            and make sure your jobs are seen first. Always showing in the top section of the results,
+                            highlighted and with a social shout-out.
                         </div>
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-target"></span></div>
-                            <h3 class="alt-features-title font-alt">Marketing</h3>A wonderful serenity has taken
-                            possession of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-compass"></span></div>
+                            <h3 class="alt-features-title font-alt">Company Profile</h3>Attract more talent
+                            by highlighting your company and benefits with your own branded page. Text, imagery,
+                            videos, social media feeds, and more!
                         </div>
                         <div class="alt-features-item">
                             <div class="alt-features-icon"><span class="icon-tools"></span></div>
-                            <h3 class="alt-features-title font-alt">Design</h3>A wonderful serenity has taken possession
-                            of my entire soul like these sweet mornings.
+                            <h3 class="alt-features-title font-alt">Targeted E-shots</h3>Reach the right people, fast
+                            with bespoke targeted emails to relevant segments of our user base of over 200,000 active
+                            candidates.
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 hidden-xs hidden-sm">
-                        <div class="alt-services-image align-center"><img src="/assets/images/promo.png"
+                        <div class="alt-services-image align-center"><img src="/img/office1.jpg"
+                                                                          style="margin-top: 36%;"
                                                                           alt="Feature Image"></div>
                     </div>
                     <div class="col-sm-6 col-md-3 col-lg-3">
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-camera"></span></div>
-                            <h3 class="alt-features-title font-alt">Photography</h3>A wonderful serenity has taken
-                            possession of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-search"></span></div>
+                            <h3 class="alt-features-title font-alt">Job Search Engines</h3>Syndicate your vacancies
+                            to more than 10 job search engines we work with – including Indeed, Adzuna, Jobrapido and
+                            more.
                         </div>
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-mobile"></span></div>
-                            <h3 class="alt-features-title font-alt">Mobile</h3>A wonderful serenity has taken possession
-                            of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-alarmclock"></span></div>
+                            <h3 class="alt-features-title font-alt">Applicant Tracking System</h3>Improving your whole
+                            recruitment process
+                            used by brands across the UK, our applicant tracking system helps you filter, screen, invite
+                            to interview, and much more. Find out more at www.rfunl.com
                         </div>
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-linegraph"></span></div>
-                            <h3 class="alt-features-title font-alt">Music</h3>A wonderful serenity has taken possession
-                            of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-facebook"></span></div>
+                            <h3 class="alt-features-title font-alt">Social Media</h3>Communicating your vacancy
+                            to our 20,000+ jobseeker following on social media to give your positions extra promotion.
                         </div>
                         <div class="alt-features-item">
-                            <div class="alt-features-icon"><span class="icon-basket"></span></div>
-                            <h3 class="alt-features-title font-alt">Shop</h3>A wonderful serenity has taken possession
-                            of my entire soul like these sweet mornings.
+                            <div class="alt-features-icon"><span class="icon-newspaper"></span></div>
+                            <h3 class="alt-features-title font-alt">Newsletter Inclusion</h3>Boost applications every
+                            month
+                            our newsletter is sent out monthly to over 200,000 active registered jobseekers. Join
+                            nationwide brands in attracting immediate applications and interest.
                         </div>
                     </div>
                 </div>
