--- a/templates/employer/pricing.html.twig
+++ b/templates/employer/pricing.html.twig
@@ -27,7 +27,7 @@
                                 <li>1 Day RDA</li>
                                 <li><span>Premium Job Posting</span></li>
                             </ul>
-                            <a class="btn btn-d btn-round" href="#">Contact Us</a>
+                            <a class="btn btn-d btn-round" href="{{ path('_contactus') }}">Contact Us</a>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 col-lg-3">
@@ -41,7 +41,7 @@
                                 <li>1 Week RDA</li>
                                 <li>5 Premium Job Posting</li>
                             </ul>
-                            <a class="btn btn-d btn-round" href="#">Contact Us</a>
+                            <a class="btn btn-d btn-round" href="{{ path('_contactus') }}">Contact Us</a>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 col-lg-3">
@@ -56,7 +56,7 @@
                                 <li>15 Days RDA</li>
                                 <li>10 Premium Job Posting</li>
                             </ul>
-                            <a class="btn btn-d btn-round" href="#">Contact Us</a>
+                            <a class="btn btn-d btn-round" href="{{ path('_contactus') }}">Contact Us</a>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 col-lg-3">
@@ -70,7 +70,7 @@
                                 <li>1 Month RDA</li>
                                 <li>15 Premium Job Posting</li>
                             </ul>
-                            <a class="btn btn-d btn-round" href="#">Contact Us</a>
+                            <a class="btn btn-d btn-round" href="{{ path('_contactus') }}">Contact Us</a>
                         </div>
                     </div>
                 </div>
