--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     {% block stylesheets %}{% endblock %}
     <script type="text/javascript"
-            src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB7iYeVpuQ0vMoW0JSzTgwhxY7C3QccZ7g"></script>
+            src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB7iYeVpuQ0vMoW0JSzTgwhxY7C3QccZ7g"></script>
 
 </head>
 <body>
