--- a/templates/employerbase.html.twig
+++ b/templates/employerbase.html.twig
@@ -25,7 +25,7 @@
     </title>
     {% block stylesheets %}{% endblock %}
     <script type="text/javascript"
-            src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB7iYeVpuQ0vMoW0JSzTgwhxY7C3QccZ7g"></script>
+            src=">setMaxResults(6)leapis.com/maps/api/js?libraries=places&key=AIzaSyB7iYeVpuQ0vMoW0JSzTgwhxY7C3QccZ7g"></script>
 </head>
 <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
 <main>
