--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -73,6 +73,12 @@
                                     <li>
                                         <a href="{{ path('custom_schoolaffiliation') }}">School Affiliation</a>
                                     </li>
+                                    <li>
+                                        <a href="{{ path('_contactus') }}">Study Abroad</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('_contactus') }}">Our Courses</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li>
@@ -123,9 +129,6 @@
                                     <a href="/">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Jobs</a>
-                                </li>
-                                <li>
                                     <a href="{{ path('_aboutus') }}">About Us</a>
                                 </li>
                                 <li>
@@ -150,8 +153,15 @@
                                         <li>
                                             <a href="{{ path('custom_placementservices') }}">Placement services</a>
                                         </li>
+
                                         <li>
                                             <a href="{{ path('custom_schoolaffiliation') }}">School Affiliation</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('_contactus') }}">Study Abroad</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('_contactus') }}">Our Courses</a>
                                         </li>
                                     </ul>
                                 </li>
